Temporarily disable CONFIG_EXYNOS5_DYNAMIC_CPU_HOTPLUG, is causing kpanic

--- a/arch/arm/configs/lineage_k3gxx_defconfig
+++ b/arch/arm/configs/lineage_k3gxx_defconfig
@@ -355,7 +355,7 @@ CONFIG_EXYNOS_CORESIGHT_PC_INFO=y
 CONFIG_PC_ITERATION=5
 # CONFIG_EXYNOS_CORESIGHT_MAINTAIN_DBG_REG is not set
 # CONFIG_EXYNOS_SNAPSHOT is not set
-CONFIG_EXYNOS5_DYNAMIC_CPU_HOTPLUG=y
+# CONFIG_EXYNOS5_DYNAMIC_CPU_HOTPLUG is not set
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_EXYNOS5_SETUP_MIPIPHY=y
 # CONFIG_ASV_MARGIN_TEST is not set
